[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
tracker-common = { path = "../tracker-common", features=["userspace"] }
anyhow = "1.0.42"
bytes = "1"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.32"
metrics = "0.18.1"
metrics-exporter-prometheus = "0.9.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
axum = "0.4.8"
clap = { version = "3.1.6", features = ["derive"] }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }

[[bin]]
name = "tracker"
path = "src/main.rs"
